# jitc_genai

./: .env.template  .gitignore  CHANGELOG.md  DELIVERY_SUMMARY.md  Dockerfile.base  INSTALL.md  JSON_IMPLEMENTATION_SUMMARY.md  JSON_INTEGRATION_EXAMPLES.py  JSON_QUICK_REFERENCE.md  JSON_TEST_PLAN_GUIDE.md  LICENSE  QUICKSTART.md  QUICK_RELEASE.md  README.md  RELEASE_PROCESS.md  backup_manager.py  docker-compose.yml  pyproject.toml  requirements.md  run
.claude/: settings.local.json
.github/workflows/: build-installers.yml
archive/: 002_fix_agent_max_tokens.sql  config.py  model_registry.py
docs/: MIGRATION_GUIDE.md  TESTING_CHECKLIST.md
installer/: DEPLOYMENT_GUIDE.md  INSTALLER_UPDATES.md  README.md  build-local.sh  metadata.json
installer/linux/: rpm-postinst.sh
installer/scripts/: check_prerequisites.sh  install-ollama.sh  setup-env.sh
installer/windows/: CustomUI.wxs  ENV_CONFIGURATION.md  EnvConfigDialog.wxs  INSTALLER-REQUIREMENTS.md  LICENSE.rtf  LOG-OUTPUT-GUIDE.md  Product.wxs  QUICK_START.md  SIMPLIFICATION-SUMMARY.md  build-msi.ps1
scripts/: README-OLLAMA-MODELS.md  backup.sh  check_pipeline_status.sh  init-ollama.sh  install-ollama.sh  installer.sh  models.sh  pull-ollama-models.ps1  pull-ollama-models.sh  regenerate_test_plans.py  reingest_all_documents.py  restart-services.sh  restore.sh  setup-env.sh  start.sh  stop.sh  test-deployment.sh  test_page_synchronization_e2e.py  validation.sh  verify-installation.sh  verify_heading_chunking.py
src/fastapi/: Dockerfile.fastapi  celery_app.py  main.py
src/llm_config/: __init__.py  llm_config.py
(+188 files in other folders)
